--- a/src/app/pages/Home.module.css
+++ b/src/app/pages/Home.module.css
@@ -142,7 +142,7 @@
 @media (max-width: 768px) {
   .main {
     gap: 48px;
-    padding-top: 73px;
+    padding-top: 84px;
   }
 
   .section {
